--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@rocketseat/eslint-config": "1.2.0",
     "@types/node": "^20.3.1",
     "eslint": "8.42.0",
+    "prisma": "4.15.0",
     "tsup": "^6.7.0",
     "tsx": "^3.12.7",
     "typescript": "^5.1.3"
