--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start:dev": "tsx watch src/server.ts",
     "build": "tsup src --out-dir build",
     "start": "node build/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest run",
+    "test:watch" : "vitest"
   },
   "keywords": [],
   "author": "",
@@ -20,7 +21,9 @@
     "prisma": "4.15.0",
     "tsup": "^6.7.0",
     "tsx": "^3.12.7",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "vite-tsconfig-paths": "4.2.0",
+    "vitest": "0.32.2"
   },
   "dependencies": {
     "@prisma/client": "4.15.0",
