--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsup src --out-dir build",
     "start": "node build/server.ts",
     "test": "vitest run",
-    "test:watch" : "vitest"
+    "test:watch": "vitest"
   },
   "keywords": [],
   "author": "",
@@ -26,10 +26,11 @@
     "vitest": "0.32.2"
   },
   "dependencies": {
-    "@prisma/client": "4.15.0",
+    "@prisma/client": "5.0.0",
     "bcryptjs": "2.4.3",
     "dotenv": "16.1.4",
     "fastify": "^4.18.0",
+    "vite": "4.4.4",
     "zod": "3.21.4"
   }
 }
