--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "tsup src --out-dir build",
     "start": "node build/server.ts",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "test:coverage": "vitest  run --coverage",
+    "test:ui": "vitest --ui"
   },
   "keywords": [],
   "author": "",
@@ -16,12 +18,14 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "1.2.0",
     "@types/bcryptjs": "2.4.2",
-    "@types/node": "^20.3.1",
+    "@types/node": "20.3.1",
+    "@vitest/coverage-v8": "0.33.0",
+    "@vitest/ui": "0.33.0",
     "eslint": "8.42.0",
     "prisma": "4.15.0",
-    "tsup": "^6.7.0",
-    "tsx": "^3.12.7",
-    "typescript": "^5.1.3",
+    "tsup": "6.7.0",
+    "tsx": "3.12.7",
+    "typescript": "5.1.3",
     "vite-tsconfig-paths": "4.2.0",
     "vitest": "0.32.2"
   },
@@ -29,7 +33,7 @@
     "@prisma/client": "5.0.0",
     "bcryptjs": "2.4.3",
     "dotenv": "16.1.4",
-    "fastify": "^4.18.0",
+    "fastify": "4.18.0",
     "vite": "4.4.4",
     "zod": "3.21.4"
   }
