--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "1.2.0",
     "@types/bcryptjs": "2.4.2",
+    "@types/mocha": "10.0.1",
     "@types/node": "20.3.1",
     "@vitest/coverage-v8": "0.33.0",
     "@vitest/ui": "0.33.0",
